--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div class="container footer__container">
-    <div class="footer__top-block">
+    <!-- <div class="footer__top-block">
 
       <form class="footer__form form" id="footer-form" action="files/post-mail.php" method="post"
         enctype="multipart/form-data">
@@ -64,13 +64,13 @@
       </div>
 
 
-    </div>
+    </div> -->
 
-    <div class="footer__middle-block">
+    <div class="footer__top-block">
 
       <div class="footer__contacts contacts" id="footer-contacts">
-        <a href="tel:+7 3452 611 157" class="contacts__item contacts__item_phone">
-          +7 3452 611 157
+        <a href="tel:8 (3452) 611-157" class="contacts__item contacts__item_phone">
+          8 (3452) 611-157
         </a>
         <a href="mailto:info@sibir.com" class="contacts__item contacts__item_email">
           info@sibir.com
@@ -89,8 +89,7 @@
           <ul class="nav__list">
 
             <li class="nav__item">
-              <a href="#" class="nav__link">
-                <!-- <a href="o-proekte.html" class="nav__link"> -->
+              <a href="proekty.html" class="nav__link">
                 <p class="nav__text">
                   Проекты
                 </p>
@@ -98,8 +97,7 @@
             </li>
 
             <li class="nav__item">
-              <a href="#" class="nav__link">
-                <!-- <a href="planirovki.html" class="nav__link"> -->
+              <a href="kommercia.html" class="nav__link">
                 <p class="nav__text">
                   Коммерция
                 </p>
@@ -107,8 +105,7 @@
             </li>
 
             <li class="nav__item">
-              <a href="#" class="nav__link">
-                <!-- <a href="mestopologenie.html" class="nav__link"> -->
+              <a href="sposob-pokupki.html" class="nav__link">
                 <p class="nav__text">
                   Способ покупки
                 </p>
@@ -116,8 +113,7 @@
             </li>
 
             <li class="nav__item">
-              <a href="#" class="nav__link">
-                <!-- <a href="kontakty.html" class="nav__link"> -->
+              <a href="akcii.html" class="nav__link">
                 <p class="nav__text">
                   Акции
                 </p>
@@ -135,7 +131,6 @@
 
             <li class="nav__item">
               <a href="#" class="nav__link">
-                <!-- <a href="o-proekte.html" class="nav__link"> -->
                 <p class="nav__text">
                   Студии
                 </p>
@@ -144,7 +139,6 @@
 
             <li class="nav__item">
               <a href="#" class="nav__link">
-                <!-- <a href="planirovki.html" class="nav__link"> -->
                 <p class="nav__text">
                   1-комнатные
                 </p>
@@ -153,7 +147,6 @@
 
             <li class="nav__item">
               <a href="#" class="nav__link">
-                <!-- <a href="mestopologenie.html" class="nav__link"> -->
                 <p class="nav__text">
                   2-комнатные
                 </p>
@@ -162,7 +155,6 @@
 
             <li class="nav__item">
               <a href="#" class="nav__link">
-                <!-- <a href="kontakty.html" class="nav__link"> -->
                 <p class="nav__text">
                   3-комнатные
                 </p>
@@ -179,8 +171,7 @@
           <ul class="nav__list">
 
             <li class="nav__item">
-              <a href="#" class="nav__link">
-                <!-- <a href="o-proekte.html" class="nav__link"> -->
+              <a href="o-companii.html" class="nav__link">
                 <p class="nav__text">
                   О компании
                 </p>
@@ -188,8 +179,7 @@
             </li>
 
             <li class="nav__item">
-              <a href="#" class="nav__link">
-                <!-- <a href="planirovki.html" class="nav__link"> -->
+              <a href="novosti.html" class="nav__link">
                 <p class="nav__text">
                   Новости
                 </p>
@@ -197,8 +187,7 @@
             </li>
 
             <li class="nav__item">
-              <a href="#" class="nav__link">
-                <!-- <a href="mestopologenie.html" class="nav__link"> -->
+              <a href="sotrudnichestvo.html" class="nav__link">
                 <p class="nav__text">
                   Сотрудничество
                 </p>
@@ -206,8 +195,7 @@
             </li>
 
             <li class="nav__item">
-              <a href="#" class="nav__link">
-                <!-- <a href="kontakty.html" class="nav__link"> -->
+              <a href="kontakty.html" class="nav__link">
                 <p class="nav__text">
                   Контакты
                 </p>
@@ -239,10 +227,10 @@
         <a href="./policy.html" class="footer__policy" target="_blank">
           Политика конфиденциальности
         </a>
-        <a href="https://xn--80az8a.xn--d1aqf.xn--p1ai/%D1%81%D0%B5%D1%80%D0%B2%D0%B8%D1%81%D1%8B/%D0%BA%D0%B0%D1%82%D0%B0%D0%BB%D0%BE%D0%B3-%D0%BD%D0%BE%D0%B2%D0%BE%D1%81%D1%82%D1%80%D0%BE%D0%B5%D0%BA/%D0%BE%D0%B1%D1%8A%D0%B5%D0%BA%D1%82/60004"
+        <!-- <a href="https://xn--80az8a.xn--d1aqf.xn--p1ai/%D1%81%D0%B5%D1%80%D0%B2%D0%B8%D1%81%D1%8B/%D0%BA%D0%B0%D1%82%D0%B0%D0%BB%D0%BE%D0%B3-%D0%BD%D0%BE%D0%B2%D0%BE%D1%81%D1%82%D1%80%D0%BE%D0%B5%D0%BA/%D0%BE%D0%B1%D1%8A%D0%B5%D0%BA%D1%82/60004"
           class="footer__policy" target="_blank">
           Проектные декларации
-        </a>
+        </a> -->
       </div>
 
       <button class="btn btn_dark btn_reset footer__btn popup-link" href="#popup-notification">
