--- a/src/html/header.html
+++ b/src/html/header.html
@@ -76,7 +76,7 @@
       </div>
 
       <div class="header__contacts contacts">
-        <a href="tel:+7 3452 611 157" class="contacts__item contacts__item_phone">+7 3452 611 157</a>
+        <a href="tel:8 (3452) 611-157" class="contacts__item contacts__item_phone">8 (3452) 611-157</a>
       </div>
       <button class="header__burger burger">
         <div class="burger__open-btn">
