--- a/src/novosti.html
+++ b/src/novosti.html
@@ -14,10 +14,10 @@
           Новости Сибири
         </h1>
         <div class="news-page__btn-wrapper">
-          <a class="news-page__btn news-page__btn_green" href="#">
+          <a class="news-page__btn news-page__btn_green" href="novosti.html">
             Новости
           </a>
-          <a class="news-page__btn news-page__btn_white" href="#">
+          <a class="news-page__btn news-page__btn_white" href="akcii.html">
             Акции
           </a>
         </div>
@@ -29,9 +29,11 @@
             <p class="news-page__card-date">
               01 мая 2024
             </p>
-            <h2 class="news-page__card-title" >
-              Динамика строительства «Сосновый». Апрель 2024.
-            </h2>
+            <a class="news-page__card-link" href="novosti-item.html">
+              <h2 class="news-page__card-title">
+                Динамика строительства «Сосновый». Апрель 2024.
+              </h2>
+            </a>
           </li>
           <li class="news-page__cards-item">
             <div class="news-page__card-img-wrapper">
@@ -40,9 +42,11 @@
             <p class="news-page__card-date">
               01 мая 2024
             </p>
-            <h2 class="news-page__card-title" >
-              Сибирь разрабатывает новый проект ЖК «Успенка»
-            </h2>
+            <a class="news-page__card-link" href="novosti-item.html">
+              <h2 class="news-page__card-title">
+                Сибирь разрабатывает новый проект ЖК «Успенка»
+              </h2>
+            </a>
           </li>
           <li class="news-page__cards-item">
             <div class="news-page__card-img-wrapper">
@@ -51,9 +55,11 @@
             <p class="news-page__card-date">
               01 мая 2024
             </p>
-            <h2 class="news-page__card-title" >
-              Динамика строительства Сосновый. Апрель 2024.
-            </h2>
+            <a class="news-page__card-link" href="novosti-item.html">
+              <h2 class="news-page__card-title">
+                Динамика строительства Сосновый. Апрель 2024.
+              </h2>
+            </a>
           </li>
           <li class="news-page__cards-item">
             <div class="news-page__card-img-wrapper">
@@ -62,9 +68,11 @@
             <p class="news-page__card-date">
               01 мая 2024
             </p>
-            <h2 class="news-page__card-title" >
-              Сибирь объявляет об операционных результатах первого квартала 2024
-            </h2>
+            <a class="news-page__card-link" href="novosti-item.html">
+              <h2 class="news-page__card-title">
+                Сибирь объявляет об операционных результатах первого квартала 2024
+              </h2>
+            </a>
           </li>
         </ul>
       </div>
